# front-end/src/api/historyApi.js
@@ -1,0 +1,9 @@
+import axiosClient from "./axiosClient";
+
+
+export const historyApi = {
+    all({params, body}) {
+        const url = `/history`;
+        return axiosClient.get(url, {params, ...body});
+    },
+}
